Created the RestrainPosition energy term